examples/test/testpolicy12413.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12413
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key9: value30
      key32: value45
      key34: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value37
      podSelector:
        matchLabels:
          key32: value29
